add notification feature

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -33,6 +33,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Dtos\Wallet\" />
 	  <Folder Include="Features\Value\Queries\" />
 	  <Folder Include="Features\Payment\Queries\" />
 	</ItemGroup>
