--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -12,10 +12,10 @@
   },
   "RedisCacheUrl": "WIN-36L4DFAMA6B:6379",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=weuapp;Integrated Security=SSPI;Persist Security Info=False;MultipleActiveResultSets=True;Encrypt=false"
+    //"DefaultConnection": "Data Source=.;Initial Catalog=weuapp;Integrated Security=SSPI;Persist Security Info=False;MultipleActiveResultSets=True;Encrypt=false"
     //"DefaultConnection": "Data Source=.;Initial Catalog=WEDB;Trusted_Connection=True;Integrated Security=SSPI;Persist Security Info=False;Encrypt=false"
     //"DefaultConnection1": "Server=.;Database=WEU;Trusted_Connection=True;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Data Source=.;Initial Catalog=WEUDB;Trusted_Connection=False;User Id=sa;Password=DBWEU1359@Web;MultipleActiveResultSets=True;Encrypt=false"
+    "DefaultConnection": "Data Source=.;Initial Catalog=weuapp_db;Trusted_Connection=False;User Id=sa;Password=DBWEU1359@Web;MultipleActiveResultSets=True;Encrypt=false"
   },
   "JWT": {
     "key": "C1CF4B7DC4C4175B6618DE4F55CA4",
